--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             hash = ((hash<<5)-hash)+char;
             hash = hash & hash; // Convert to 32bit integer
         }
-        return hash.toString(16).padStart(6,"0");
+        return hash.toString(16).padStart(8,"0"); // 8 character hexadecimal
     }
 
     function cb(response) {
