--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <h2>Se você não for automaticamente direcionado, <a id="pesquisa" href="#">Acesse a Pesquisa</a></h2>
 <script>
-    String.prototype.hashCode = function() {
+    function getCode(i) {
+        let s = i.toString()
         var hash = 0;
         if (this.length == 0) {
             return hash;
@@ -14,8 +15,9 @@
     }
 
     function cb(response) {
-        document.getElementById('visits').innerText = "Seu ID é: " + response.value.hashCode();
-        let url = `https://docs.google.com/forms/d/e/1FAIpQLSdFdi9GV80VgrFMq-eMQZAD_yhy6W4E8LQ9eItW6x5XS_7tvg/viewform?usp=pp_url&entry.1758690655=${response.value.hashCode()}`
+        const ID = getCode(i)
+        document.getElementById('visits').innerText = "Seu ID é: " + ID;
+        let url = `https://docs.google.com/forms/d/e/1FAIpQLSdFdi9GV80VgrFMq-eMQZAD_yhy6W4E8LQ9eItW6x5XS_7tvg/viewform?usp=pp_url&entry.1758690655=${ID}`
         window.location.href = url;
         document.getElementById('pesquisa').setAttribute("href", url);
     }
