--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     function getCode(i) {
         let s = i.toString()
         var hash = 0;
-        if (this.length == 0) {
+        if (s.length == 0) {
             return hash;
         }
-        for (var i = 0; i < this.length; i++) {
-            var char = this.charCodeAt(i);
+        for (var i = 0; i < s.length; i++) {
+            var char = s.charCodeAt(i);
             hash = ((hash<<5)-hash)+char;
             hash = hash & hash; // Convert to 32bit integer
         }
