--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<h1 id="visits"></h1>
 <h2>Se você não for automaticamente direcionado, <a id="pesquisa" href="#">Acesse a Pesquisa</a></h2>
 <script>
     function getCode(number) {
