--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <h1 id="visits"></h1>
 <h2>Se você não for automaticamente direcionado, <a id="pesquisa" href="#">Acesse a Pesquisa</a></h2>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <script>
     function getCode(number) {
         let s = number.toString()
