--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     function cb(response) {
         const ID = getCode(response.value)
         document.getElementById('visits').innerText = "Seu ID é: " + ID;
-        let url = `https://docs.google.com/forms/d/e/1FAIpQLSdFdi9GV80VgrFMq-eMQZAD_yhy6W4E8LQ9eItW6x5XS_7tvg/viewform?usp=pp_url&entry.1758690655=${ID}`
+        const url = `https://docs.google.com/forms/d/e/1FAIpQLSclZzeTgrWvSARZe-nILlb4y5c_WMxecb-uRAvZ_48TBoci6w/viewform?usp=pp_url&entry.1758690655=${ID}`
         window.location.href = url;
         document.getElementById('pesquisa').setAttribute("href", url);
     }
